# CarRentalBack

./: .gitignore  .pdm-python  README.md  env.sample  pyproject.toml  requirements.txt
app/: config.py  crud.py  db.py  logger.py  main.py  middleware.py  models.py  schemas.py  utils.py
app/crud/: auth.py  auth_crud.py  booking_crud.py  user.py  user_crud.py  vehicle_crud.py
app/routers/: auth.py  auth_routes.py  bookings_routes.py  users.py  users_routes.py  vehicles_routes.py
app/schemas/: auth_schemas.py  booking_schemas.py  user_schemas.py  vehicle_schemas.py
app/utils/: jwt_utils.py  mail_utils.py  password_utils.py
