[tool.poetry]
name = "car-rental-api"
version = "0.1.0"
description = ""
authors = ["ize-302 <adavizeozorku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.1.2"
poetry = "^1.7.1"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
certifi = "^2023.11.17"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
cryptography = "^41.0.7"
dnspython = "^2.5.0"
ecdsa = "^0.18.0"
email-validator = "^2.1.0.post1"
fastapi = "^0.109.0"
fastapi-jwt-auth = "^0.5.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
httpcore = "^1.0.2"
httptools = "^0.6.1"
httpx = "^0.26.0"
idna = "^3.6"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"
markupsafe = "^2.1.4"
orjson = "^3.9.12"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
pyasn1 = "^0.5.1"
pycparser = "^2.21"
pydantic = "^2.5.3"
pydantic-extra-types = "^2.4.1"
pydantic-settings = "^2.1.0"
pydantic-core = "^2.16.1"
pyscopg2 = "^66.0.2"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
requests = "^2.31.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.25"
typing-extensions = "^4.9.0"
ujson = "^5.9.0"
urllib3 = "^2.1.0"
uvicorn = "^0.27.0"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
